# solhunt

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  metering.toml
assets/contracts/: Lock.sol  Over.sol  Ownable.sol  Recursion.sol  Storage.sol  Uint.sol  Void.sol  Void.t.sol
benches/: modules.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: parse.rs
cli/src/modules/: TODO.md  assembly.rs  calls.rs  erc20.rs  loader.rs  mod.rs  overflow.rs  oz.rs  style.rs  uint256.rs
cli/src/utils/: bytes.rs  formatter.rs  mod.rs
cli/test-data/: DummyUint256.sol.sol  NoOverFlow.sol  OldVerCheck.sol  Unchecked.sol
core/: Cargo.toml
core/src/: lib.rs
core/src/ast/: function.rs  mod.rs
core/src/ast/node/: declaration.rs  expression.rs  loops.rs  mod.rs  node.rs  operators.rs  types.rs
core/src/loader/: loader.rs  mod.rs  module.rs
core/src/solidity/: compiler.rs  mod.rs  utils.rs
core/src/walker/: findings.rs  mod.rs  nodes.rs  parser.rs  visitor.rs  walker.rs
gas-metering/: README.md  metering.toml
gas-metering/contracts/address_zero/: 0.sol
gas-metering/contracts/condition/: 0.sol
gas-metering/contracts/constructor/: 0.sol  1.sol
gas-metering/contracts/immutable/: 0.sol
gas-metering/contracts/require/: 0.sol  1.sol
gas-metering/contracts/state/: 0.sol  1.sol  3.sol
gas-metering/contracts/tree/: 0.sol
src/: lib.rs  main.rs
src/cmd/: analyze.rs  bars.rs  gas.rs  mod.rs  parse.rs
src/formatter/: mod.rs  report.rs
src/interpreter/: gas.rs  mod.rs  prepare.rs
src/loader/: mod.rs  module.rs
src/modules/: GUIDE.md  TODO.md  address_zero.rs  assembly.rs  calls.rs  centralization.rs  chainlink.rs  erc20.rs  loader.rs  misc.rs  mod.rs  overflow.rs  oz.rs  proxy.rs  style.rs  uint256.rs
src/modules/gas/: address_zero.rs  condition.rs  constructor.rs  custom_errors.rs  function.rs  immutable.rs  loops.rs  maths.rs  mod.rs  require.rs  state.rs  tight_pack.rs  tree.rs
src/modules/high/: calls.rs  dirty.rs  mod.rs
src/modules/info/: mod.rs  style.rs
src/modules/low/: erc20.rs  misc.rs  mod.rs
src/modules/medium/: assembly.rs  centralization.rs  chainlink.rs  encode_packed.rs  mod.rs  overflow.rs  proxy.rs
src/solidity/: compiler.rs  mod.rs  tests.rs  utils.rs
src/tests/: biconomy.rs  escher.rs  mod.rs
src/utils/: bytes.rs  byteslib.rs  formatter.rs  mod.rs
src/walker/: findings.rs  instru.rs  mod.rs  parser.rs  traversal.rs  walker.rs
test-data/biconomy/: BaseSmartAccount.sol  Proxy.sol  SmartAccount.sol  SmartAccountFactory.sol  SmartAccountNoAuth.sol  remappings.txt  report.md
test-data/biconomy/aa-4337/core/: BasePaymaster.sol  EntryPoint.sol
test-data/biconomy/aa-4337/interfaces/: IAccount.sol  IAggregatedAccount.sol  IAggregator.sol
test-data/biconomy/base/: Executor.sol  FallbackManager.sol  ModuleManager.sol
test-data/biconomy/common/: Enum.sol  SecuredTokenTransfer.sol  SelfAuthorized.sol  SignatureDecoder.sol  Singleton.sol
test-data/biconomy/handler/: DefaultCallbackHandler.sol
test-data/biconomy/interfaces/: ERC1155TokenReceiver.sol  ERC721TokenReceiver.sol  ERC777TokensRecipient.sol  IERC1271Wallet.sol  IERC165.sol  ISignatureValidator.sol
test-data/biconomy/libs/: LibAddress.sol  Math.sol  MultiSend.sol  MultiSendCallOnly.sol  Strings.sol
test-data/biconomy/paymasters/: BasePaymaster.sol  PaymasterHelpers.sol
test-data/biconomy/paymasters/verifying/singleton/: VerifyingSingletonPaymaster.sol
test-data/biconomy/utils/: Decoder.sol  GasEstimator.sol  GasEstimatorSmartAccount.sol
test-data/lib/@account-abstraction/contracts/types/: BaseAccount.ts  BasePaymaster.ts  DepositPaymaster.ts  EntryPoint.ts  IAccount.ts  IAggregatedAccount.ts  IAggregator.ts  ICreate2Deployer.ts  IEntryPoint.ts  IPaymaster.ts  IStakeManager.ts  SenderCreator.ts  SimpleAccount.ts  SimpleAccountDeployer.ts  SimpleAccountForTokens.ts  StakeManager.ts  TokenPaymaster.ts  VerifyingPaymaster.ts  index.ts
test-data/lib/@account-abstraction/contracts/types/factories/: BaseAccount__factory.ts  BasePaymaster__factory.ts  DepositPaymaster__factory.ts  EntryPoint__factory.ts  IAccount__factory.ts  IAggregatedAccount__factory.ts  IAggregator__factory.ts  ICreate2Deployer__factory.ts  IEntryPoint__factory.ts  IPaymaster__factory.ts  IStakeManager__factory.ts  SenderCreator__factory.ts  SimpleAccountDeployer__factory.ts  SimpleAccountForTokens__factory.ts  SimpleAccount__factory.ts  StakeManager__factory.ts  TokenPaymaster__factory.ts  VerifyingPaymaster__factory.ts  index.ts
test-data/lib/@account-abstraction/sdk/: package.json
test-data/lib/@account-abstraction/utils/: package.json
