[package]
name = "solhunt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.17", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor", features = ["svm-solc", "project-util"] }
ethers-core = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
ethers-contract = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
eyre = "0.6.8"
semver = "1.0.13"
serde = "1.0.143"
foundry-cli = { git = "https://github.com/iFrostizz/foundry", branch = "franfran/fix-ast-coverage" }
foundry-common = { git = "https://github.com/iFrostizz/foundry", branch = "franfran/fix-ast-coverage" }
yansi = "0.5.1"
revm = "3.0.0"
serde_json = "1.0.92"
cli-table = "0.4.7"
