[package]
name = "solhunt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.1.4", features = [ "derive" ] }
eyre = "^0.6.8"
semver = "^1.0.13"
serde = "^1.0.143"
yansi = "^0.5.1"
revm = "^3.0.0"
cli-table = "^0.4.7"

ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor", features = ["svm-solc", "project-util"] }
ethers-core = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
ethers-contract = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
foundry-cli = { git = "https://github.com/iFrostizz/foundry.git", branch = "franfran/fix-ast-coverage" }
foundry-common = { git = "https://github.com/iFrostizz/foundry.git", branch = "franfran/fix-ast-coverage" }

# [patch."https://github.com/iFrostizz/ethers-rs.git"]
# ethers-solc = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-solc" }
# ethers-core = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-core" }
# ethers-contract = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-contract" }

# [patch."https://github.com/iFrostizz/foundry.git"]
# foundry-cli = { path = "/home/franfran/Projects/utils/foundry/cli" }
# foundry-common = { path = "/home/franfran/Projects/utils/foundry/common" }
