[package]
name = "solhunt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.1.4", features = [ "derive" ] }
eyre = "^0.6.8"
semver = "^1.0.13"
serde = "^1.0.143"
yansi = "^0.5.1"
revm = "^3.0.0"
cli-table = "^0.4.7"
ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor", features = ["svm-solc", "project-util"] }
ethers-core = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
ethers-contract = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor" }
itertools = "0.10.5"
bytes = "1.4.0"
tracing = "0.1.37"
toml = "0.7.2"
indicatif = "0.17.3"
as-any = "0.3.0"
rayon = "1.7.0"
glob = "0.3.1"
tracing-subscriber = "0.3.16"

# [patch."https://github.com/iFrostizz/ethers-rs.git"]
# ethers-solc = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-solc" }
# ethers-core = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-core" }
# ethers-contract = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-contract" }
