[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
core = { path = "../core" }
# ethers-solc = { version = "0.17.0", features = ["svm-solc", "project-util"] }
ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "f/ast", features = ["svm-solc", "project-util"] }
# ethers-solc = { path = "/home/franfran/Projects/own/ethers-rs/ethers-solc", features = ["svm-solc", "project-util"] }
eyre = "0.6.8"
semver = "1.0.13"
serde = "1.0.143"
solang-parser = "0.1.17"
serde_json = "1.0.83"
ethers-core = "0.17.0"
# ethers-core = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "f/ast" }
