[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "f/ast", features = ["svm-solc"] }
ethers-solc = { path = "/home/franfran/Projects/own/ethers-rs/ethers-solc", features = ["svm-solc"] }
# ethers-solc = { version = "0.17.0", features = ["svm-solc"] }
eyre = "0.6.8"
semver = "1.0.12"
serde = "1.0.143"
serde_json = "1.0.82"
yansi = "0.5.1"
