[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", rev = "ce3cc16", features = ["svm-solc"] }
ethers-solc = { path = "/home/franfran/Projects/utils/ethers-rs/ethers-solc", features = ["svm-solc"] }
# foundry-cli = { git = "https://github.com/iFrostizz/foundry.git", rev = "ff92a13" }
# foundry-config = { git = "https://github.com/iFrostizz/foundry.git", rev = "ff92a13" }
# foundry-common = { git = "https://github.com/iFrostizz/foundry.git", rev = "ff92a13" }
# foundry = { git = "https://github.com/iFrostizz/foundry.git", rev = "ff92a13" }
foundry-cli = { path = "/home/franfran/Projects/utils/foundry/cli" }
foundry-config = { path = "/home/franfran/Projects/utils/foundry/config" }
foundry-common = { path = "/home/franfran/Projects/utils/foundry/common" }
# ethers-solc = { version = "0.17.0", features = ["svm-solc"] }
eyre = "0.6.8"
semver = "1.0.12"
serde = "1.0.143"
serde_json = "1.0.82"
yansi = "0.5.1"
